# memory-quest-fastapi

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
dependencies/: session.py  user.py
models/: base_model.py  game.py  hero.py  team.py  user.py
routers/: game_router.py  hero_router.py  team_router.py  user_router.py
schemas/: core_schema.py  hero_schema.py  user_schema.py
services/: db.py
static/: bg.avif  script.js
templates/: about.html  game.html  levels.html  login.html  profile.html  ranks.html
utils/: pagination.py  security.py
