[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "psycopg>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]
